# NLP-Pytorch-Hardware-Benchmark

./: README.md  main.py  pyproject.toml  troubleshoot.md
trainingbenchmark/: __init__.py  cli.py
